# space_invaders

./: .gitignore  CMakeLists.txt
include/: myLib.hpp  spaceship.hpp
src/: main.cpp  myLib.cpp  spaceship.cpp
